src/objects/SBQQ__ColumnMetadata__c.object
<CustomObject>
    <description>Individual sizing for each field on the QuoteLine.</description>
    <fields>
        <fullName>SBQQ__ColumnValidation__c</fullName>
        <label>Column Validation</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__FieldColumnSize__c</fullName>
        <description>The column size for the field</description>
        <inlineHelpText>Column Size for corresponding field. Default 150px.</inlineHelpText>
        <label>Field Column Size</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__FieldName__c</fullName>
        <description>The API Name of the field you would like to use.</description>
        <label>Field Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FieldSetMetadata__c</fullName>
        <description>Master detail to FieldSet Metadata.</description>
        <inlineHelpText>FieldSet Metadata relationship.</inlineHelpText>
        <label>FieldSet Metadata</label>
        <referenceTo>SBQQ__FieldSetMetadata__c</referenceTo>
        <relationshipLabel>Columns Metadata</relationshipLabel>
        <relationshipName>ColumnsMetadata</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Column Metadata</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Column Metadata Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Columns Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>